--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
-<div class="caixa-alternativas"></div>
-<div class="caixa-resultado"></div>
-    <p class="texto-resultado"></p>
-    <button class="novamente-btn">jogar novamente</button>
-</div>
-</div>
-<script src="script.js"></script>
-<script type="module" src="js/aleatorio.js"></script>
-<script type="module" src="js/perguntas.js"></script>
-<script type="module" src="js/script.js"></script>
+<body></body>
+    <header>
+        <h1>Relatório das redes sociais</h1>
+        <nav>
+            <a href="index.html">Mundo</a>
+            <a href="#">Minha escola</a>
+        </nav>
+    </header>
+    <main class="graficos-section">
+        <section id="graficos-container" class="graficos-container">
+            <!-- crie os gráficos aqui -->
+        </section>
+    </main>
+    <footer>
+        <p>Desenvolvido por joão vitor</p>
+    </footer>
 </body>
-</html>
